[package]
edition = "2021"
name = "american-begonia-society"
version = "0.1.0"

[dependencies]
csv = "1.3"
derive_more = { version = "1", features = ["from_str"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["derive", "json", "macros", "postgres", "runtime-tokio", "time", "uuid"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["full", "macros"] }
uuid = { version = "1.11", features = ["serde"] }
